# ParticleSimulator

./: .gitignore  CMakeLists.txt  main
Documentation/ParticleSimulator/: Linear Algebra.md  OpenGL.md  README.md
Documentation/ParticleSimulator/.obsidian/: community-plugins.json  text-generator.json  workspace.json
Documentation/ParticleSimulator/.obsidian/plugins/obsidian-icon-folder/: data.json
Documentation/ParticleSimulator/.obsidian/plugins/obsidian-textgenerator-plugin/: data.json
Documentation/ParticleSimulator/Drafts-Ideas/: Ideas on OpenGL Sphere.md
Documentation/ParticleSimulator/Linear Algebra Intro/: Examples.md  Lines and planes.md  Matrices.md  Systems of Linear Equations.md  Transformation Matrices.md  Vectors.md
include/: Particle.h  Random.h
src/: Random.cpp  SimpleFragmentShader.fragmentshader  SimpleTransform.vertexshader  Vec3.cpp  main.cpp
src/common/: shader.cpp
tests/: ParticleTests.cpp
